# qpsolvers-eigen

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: test-pixi.yaml  update-pixi-lockfile.yaml
cmake/: AddQpSolversEigenUnitTest.cmake
core/: CMakeLists.txt
core/QpSolversEigen/: Constants.hpp  Debug.cpp  NullSolver.cpp  NullSolver.hpp  Solver.cpp  Solver.hpp  SolverInterface.hpp
docs/: migrate_from_osqp_eigen.md
examples/mpc/: CMakeLists.txt  MPCExample.cpp
examples/simple/: CMakeLists.txt  SimpleExample.cpp
plugins/: CMakeLists.txt
plugins/osqp/: CMakeLists.txt  QpSolversEigenOsqp.cpp  README.md
plugins/proxqp/: CMakeLists.txt  QpSolversEigenProxqp.cpp  README.md
tests/: CMakeLists.txt  MPCEqualityConstraintsTest.cpp  MPCTest.cpp  MPCUpdateMatricesTest.cpp  QPTest.cpp  QpSolversEigenCommonTestMacros.hpp  UpdateMatricesTest.cpp
