set(QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE OFF)
if(NOT DEFINED QPSOLVERSEIGEN_ENABLE_OSQP)
    find_package(OsqpEigen QUIET)
    message(STATUS "OsqpEigen: ${OsqpEigen_FOUND}")
    set(QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE ${OsqpEigen_FOUND})
endif()
option(QPSOLVERSEIGEN_ENABLE_OSQP "If ON, compile the osqp plugin based on osqp-eigen" ${QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE})
if(QPSOLVERSEIGEN_ENABLE_OSQP)
    add_subdirectory(osqp)
endif()
