set(QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE OFF)
if(NOT DEFINED QPSOLVERSEIGEN_ENABLE_OSQP)
    find_package(OsqpEigen QUIET)
    set(QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE ${OsqpEigen_FOUND})
endif()
option(QPSOLVERSEIGEN_ENABLE_OSQP "If ON, compile the osqp plugin based on osqp-eigen" ${QPSOLVERSEIGEN_ENABLE_OSQP_DEFAULT_VALUE})
if(QPSOLVERSEIGEN_ENABLE_OSQP)
    add_subdirectory(osqp)
endif()


set(QPSOLVERSEIGEN_ENABLE_PROXQP_DEFAULT_VALUE OFF)
if(NOT DEFINED QPSOLVERSEIGEN_ENABLE_PROXQP)
    find_package(proxsuite QUIET)
    set(QPSOLVERSEIGEN_ENABLE_PROXQP_DEFAULT_VALUE ${proxsuite_FOUND})
endif()
option(QPSOLVERSEIGEN_ENABLE_PROXQP "If ON, compile the proxqp plugin based on proxsuite" ${QPSOLVERSEIGEN_ENABLE_PROXQP_DEFAULT_VALUE})
if(QPSOLVERSEIGEN_ENABLE_PROXQP)
    add_subdirectory(proxqp)
endif()
